objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Created_by_Technician__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created by Technician</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Italy_Navision_Ref_Number__c</fullName>
        <label>Italy Navision Ref Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UK_Navision_Ref_Num__c</fullName>
        <label>UK Navision Ref Num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BE_DEF_Navision_Ref_Num__c</fullName>
        <label>BE DEF Navision Ref Num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
</CustomObject>